# ARArch

./: build.gradle  settings.gradle
app/: AndroidManifest.xml  adb-wifi.sh  build.gradle  calibration.yaml  genjni.sh  kill.sh
app/androidTest/java/no/pack/drill/ararch/: ExampleInstrumentedTest.kt
app/assets/render/shaders/: camera.frag.spv  camera.vert.spv
app/assets/shaders/: camera.frag.spv  camera.vert.spv
app/c++/: CMakeLists.txt  build-android-opencv.sh  errorfiles
app/c++/cmake/: FindOpenCV.cmake  functions.cmake
app/c++/include/mar/: CalibrationValues.hh  Repository.h  RunningStatistics.hh  Structures.h  jniint.h  jniutil.h
app/c++/include/mar/acquisition/: Camera.h  CppHardwareCamera.h  EmulatorCamera.h  FrameInfo.h  SensorData.hh  Sensors.h
app/c++/include/mar/architecture/: Architecture.h
app/c++/include/mar/architecture/tbb/: TBBCalibration.h  TBBCameraSource.h  TBBDetector.h  TBBRender.h  TBBRouter.h  TBBTimedTest.hh  TBBTracker.h
app/c++/include/mar/render/: ArchVulkanRenderer.h  Renderer.h  RendererFactory.hh  VulkanRenderer.h  VulkanTools.h
app/c++/include/mar/util/: Countable.hh  LockFreeStack.hh  LockFreeStackShared.hh  Log.hh  RingBuffer.hh  android.hh  bounded_map.h  cv.h  util.hh
app/c++/src/: Repository.cc  android.cc  jni.cc
app/c++/src/acquisition/: Camera.cc  CppHardwareCamera.cc  EmulatorCamera.cc  FrameInfo.cc  Sensors.cc
app/c++/src/architecture/: architecture.cc
app/c++/src/architecture/tbb/: TBBCameraSource.cc  TBBDetector.cc  TBBRender.cc  TBBRouter.cc  TBBTracker.cc
app/c++/src/render/vulkan/: ArchVulkanRenderer.cc  VulkanRenderer.cc  VulkanTools.cc
app/c++/src/util/: cv.cc  util.cc
app/res/drawable/: ic_launcher_background.xml
app/res/drawable-v24/: ic_launcher_foreground.xml
app/res/layout/: activity_ar.xml  activity_main.xml
app/res/layout-land/: activity_main.xml
app/res/values/: colors.xml  strings.xml
app/rs/: YUV2RGBA.rs
app/shaders/: camera.frag  camera.vert
app/src/no/pack/drill/ararch/: ARActivity.kt  MainActivity.kt
app/src/no/pack/drill/ararch/mar/: CPUFrameHandler.kt  FastCamera.kt  HardwareCamera.kt  MAR.kt  PreviewSize.kt  RenderScriptFrameHandler.kt  StandardCamera.kt
app/test/java/no/pack/drill/ararch/: ExampleUnitTest.kt
dependencies/: git.sh
dependencies/apriltag/: .gitignore  CMakeLists.txt  build.sh  gen.sh
dependencies/apriltag/compile/Debug/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
dependencies/apriltag/compile/Debug/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
dependencies/apriltag/compile/Debug/armeabi-v7a,/: CMakeCache.txt
dependencies/apriltag/compile/Debug/x86/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_install.cmake  compile_commands.json  rules.ninja
dependencies/tbb/: .gitignore  CMakeLists.txt  a.out  build.sh  gen.sh  tbb-version_string
dependencies/tbb/compile/Debug/arm64-v8a/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Debug/armeabi-v7a/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Debug/x86/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Debug/x86_64/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Release/arm64-v8a/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Release/armeabi-v7a/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Release/x86/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/compile/Release/x86_64/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
dependencies/tbb/src/: version_string.ver
